--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: AnanseSeuratWrapper
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Title: Export data from seurat object to run Ananse 
+Version: 0.0.1.0000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+    person("Jos", "Smits", , "JSmits@science.ru.nl", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0001-5858-3905"))
+Description: Export data from seurat object to run Ananse GRN prediciton (One Line, Title Case)
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
 Encoding: UTF-8
