--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,9 +4,14 @@ Version: 0.0.1.0000
 Authors@R: 
     person("Jos", "Smits", , "JSmits@science.ru.nl", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-5858-3905"))
-Description: Export data from seurat object to run Ananse GRN prediciton (One Line, Title Case)
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+Description: Export data from seurat object to run Ananse GRN prediciton.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
+Imports: 
+    Seurat,
+    dplyr,
+    purrr,
+    stringr,
+    magrittr
