--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,18 @@
 Package: AnanseSeurat
-Title: Export data from seurat object to run Ananse 
-Version: 0.0.1.0000
+Title: What the Package Does (One Line, Title Case)
+Version: 0.0.0.9000
 Authors@R: 
-    person("Jos", "Smits", , "JSmits@science.ru.nl", role = c("aut", "cre"),
-           comment = c(ORCID = "0000-0001-5858-3905"))
-Description: Export data from seurat object to run Ananse GRN prediciton.
-License: MIT
+    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
+           comment = c(ORCID = "YOUR-ORCID-ID"))
+Description: What the package does (one paragraph).
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.1
+RoxygenNote: 7.1.2
 Imports: 
-    Seurat,
     dplyr,
-    purrr,
-    stringr,
     magrittr,
+    purrr,
+    Seurat,
+    stringr,
     utils
