--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,9 @@
 export("%>%")
 export(DEGS_scANANSE)
 export(config_scANANSE)
+export(export_ATAC_Maelstrom)
 export(export_ATAC_scANANSE)
 export(export_CPM_scANANSE)
+export(import_seurat_Maelstrom)
 export(import_seurat_scANANSE)
 importFrom(magrittr,"%>%")
