single_cell_object_export

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,13 @@
 
 export("%>%")
 export(DEGS_scANANSE)
+export(Maelstrom_Motif2TF)
 export(config_scANANSE)
-export(export_ATAC_Maelstrom)
+export(export_ATAC_maelstrom)
 export(export_ATAC_scANANSE)
 export(export_CPM_scANANSE)
-export(import_seurat_Maelstrom)
+export(import_seurat_maelstrom)
 export(import_seurat_scANANSE)
+export(per_cluster_df)
 importFrom(magrittr,"%>%")
+importFrom(rlang,.data)
