--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,9 +19,13 @@ Imports:
     purrr,
     rlang,
     Seurat,
+    Signac,
     stringr,
     utils
 Suggests: 
     covr,
+    knitr,
+    rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+VignetteBuilder: knitr
