--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,14 @@
 Package: AnanseSeurat
 Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Version: 0.0.1.1
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: MIT + file LICENSE
+    person("Jos", "Smits", , "J.Smits@science.ru.nl", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0001-5858-3905"))
+    person("Jo Huiqing", "Zhou", , "Jo.Zhou@radboudumc.nl", role = c("aut"),
+           comment = c(ORCID = "0000-0002-2434-3986"))
+
+Description: Enables gene regulatory network analysis using scANANSE, Export data from Seurat objects for GRN analysis using anansnake, and incorporates anansnake results for visualization and interpertation.
+License: MIT 
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
