--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,16 @@
 Package: AnanseSeurat
-Title: Single-cell ANANSE Gene-regulatory-network analysis Seurat objects 
+Title: Construct ANANSE GRN-Analysis Seurat
 Version: 1.1.0.0
 Authors@R: c(
-    person("Jos", "Smits", , "J.Smits@science.ru.nl", role = c("aut", "cre"),
+    person("Jos", "Smits", , "J.Smits@science.ru.nl", role = c("aut", "cre","cph"),
            comment = c(ORCID = "0000-0001-5858-3905")),
-    person("Jo","Huiqing","Zhou", "Jo.Zhou@radboudumc.nl", role = c("aut","fnd"),
+    person("Jo","Huiqing","Zhou", "Jo.Zhou@radboudumc.nl", role = c("aut","fnd","cph"),
            comment = c(ORCID = "0000-0002-2434-3986"))
   )
-Description: Enables gene regulatory network analysis using scANANSE, 
-    Export data from Seurat objects for GRN analysis using anansnake, and 
-    incorporates anansnake results for visualization and interpretation.
+Description: Enables gene regulatory network analysis on single cell clusters,
+    using 'ANANSE', Xu et al.(2021) <doi:https://doi.org/10.1093/nar/gkab598>
+    export data from 'Seurat' objects for GRN analysis using ANANSE snakemake,
+    and incorporates results for visualization and interpretation.
 License: MIT + file LICENSE
 BugReports: https://github.com/JGASmits/AnanseSeurat/issues
 Encoding: UTF-8
@@ -35,3 +36,6 @@ Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 VignetteBuilder: knitr
+LazyData: true
+Depends: 
+    R (>= 2.10)
