new_code_format

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,17 +2,18 @@ Package: AnanseSeurat
 Title: Construct ANANSE GRN-Analysis Seurat
 Version: 1.1.0.0
 Authors@R: c(
-    person("Jos", "Smits", , "J.Smits@science.ru.nl", role = c("aut", "cre","cph"),
+    person(given = "Jos", family ="Smits",middle = NULL, email = "Jsmits@science.ru.nl", role = c("aut", "cre","cph"),
            comment = c(ORCID = "0000-0001-5858-3905")),
-    person("Jo","Huiqing","Zhou", "Jo.Zhou@radboudumc.nl", role = c("aut","fnd","cph"),
+    person(given ="Jo",family ="Huiqing",middle ="Zhou", email ="Jo.Zhou@radboudumc.nl", role = c("aut","fnd","cph"),
            comment = c(ORCID = "0000-0002-2434-3986"))
   )
 Description: Enables gene regulatory network analysis on single cell clusters,
-    using 'ANANSE', Xu et al.(2021) <doi:https://doi.org/10.1093/nar/gkab598>
-    export data from 'Seurat' objects for GRN analysis using ANANSE snakemake,
+    using 'ANANSE', Xu et al.(2021) <doi:10.1093/nar/gkab598>
+    export data from 'Seurat' objects for GRN analysis using 'ANANSE' implemented in 'snakemake',
     and incorporates results for visualization and interpretation.
 License: MIT + file LICENSE
 BugReports: https://github.com/JGASmits/AnanseSeurat/issues
+URL: https://github.com/JGASmits/AnanseSeurat/
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
