--- a/inst/scANANSE.yml
+++ b/inst/scANANSE.yml
@@ -1,23 +1,20 @@
 name: scANANSE
 channels:
-  - r
   - conda-forge
   - bioconda
-  - defaults
 dependencies:
   - r-base == 4.1.3
   - r-signac == 1.7.0
   - r-seurat == 4.1.1
   - r-spatstat 
-  - r-hdf5r 
+  - r-hdf5r
   - bioconductor-ensdb.hsapiens.v86 == 2.99.0
   - bioconductor-bsgenome.hsapiens.ucsc.hg38 == 1.4.4
   - bioconductor-complexheatmap
   - bioconductor-biovizbase
   - bioconductor-limma
   - macs2 
-  - numpy 
-
+  - conda-ecosystem-user-package-isolation
 
 #In a terminal with conda, type
 #$mamba env create -f scANANSE.yml
