--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,9 +8,11 @@ Authors@R: c(
            comment = c(ORCID = "0000-0002-2434-3986"))
   )
 Description: Enables gene regulatory network analysis on single cell clusters,
-    using 'ANANSE', Xu et al.(2021) <doi:10.1093/nar/gkab598>
-    export data from 'Seurat' objects for GRN analysis using 'ANANSE' implemented in 'snakemake',
-    and incorporates results for visualization and interpretation.
+    using the gene regulatory network (GRN) analysis software 
+    'ANANSE', Xu et al.(2021) <doi:10.1093/nar/gkab598>
+    export data from 'Seurat' objects for GRN analysis using 'ANANSE' 
+    implemented in 'snakemake', and incorporates results for visualization 
+    and interpretation.
 License: MIT + file LICENSE
 BugReports: https://github.com/JGASmits/AnanseSeurat/issues
 URL: https://github.com/JGASmits/AnanseSeurat/
